--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -8,13 +8,18 @@
 }
 
 body {
-  height: 150vh;
-  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 157vh;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 main {
-  width: 375px;
+  width: 420px;
   height: 100%;
   position: relative;
   display: -webkit-box;
@@ -30,12 +35,12 @@ main {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #ff7a7a;
-  border: 1px solid green;
-  padding: 4rem 1.5rem 0rem;
+  padding: 4rem 1.8rem 0rem;
 }
 
 main img {
   position: absolute;
+  height: 100%;
 }
 
 .sec-title {
@@ -51,10 +56,16 @@ main img {
           align-items: center;
   text-align: center;
   color: white;
+  margin-bottom: 2.5rem;
 }
 
 .sec-title h1 {
-  padding-bottom: 1.2rem;
+  padding-bottom: 0.9rem;
+  font-size: 1.8rem;
+}
+
+.sec-title p {
+  font-size: large;
 }
 
 .sec-price {
@@ -76,9 +87,9 @@ main img {
   color: white;
   background-color: #6055a5;
   border-radius: 0.6rem;
-  box-shadow: 0px 10px 4px -2px rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 0px 10px 4px -2px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 10px 4px -2px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -87,6 +98,10 @@ main img {
   width: 100%;
   height: 25rem;
   border-radius: 0.6rem;
+  box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: 4rem;
 }
 
 .sec-inf .sec-inf-conteudo {
@@ -139,13 +154,21 @@ main img {
   text-transform: uppercase;
   color: white;
   font-size: 0.75rem;
+  letter-spacing: 0.1rem;
   cursor: pointer;
+  box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+  -webkit-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+  -moz-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
 }
 
 .sec-inf .sec-inf-conteudo p {
   color: #b9b6d3;
   font-size: 0.7rem;
   text-align: center;
-  padding: 0rem 1rem;
+  padding: 0rem 2rem;
+}
+
+.sec-inf .sec-inf-conteudo p strong {
+  color: rgba(255, 0, 0, 0.911);
 }
 /*# sourceMappingURL=style.css.map */
