--- a/intro-component-with-signup-form-master/style.scss
+++ b/intro-component-with-signup-form-master/style.scss
@@ -14,15 +14,16 @@ $color-grayishBlue: hsl(246, 25%, 77%);
 }
 
 body{
-    // width: 375px;
-    height: 150vh;
-    border: 1px solid black;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    height: 157vh;
     font-family: "Poppins", Arial, Helvetica, sans-serif;
-    
 }
 
 main{
-    width: 375px;
+
+    width: 420px;
     height: 100%;
     position: relative;
 
@@ -32,11 +33,12 @@ main{
     justify-content: space-around;
 
     background-color: $color-red;
-    border: 1px solid green;
-    padding: 4rem 1.5rem 0rem;
+    // border: 1px solid green;
+    padding: 4rem 1.8rem 0rem;
 
     img{
         position: absolute;
+        height: 100%;
         
     }
 }
@@ -47,12 +49,17 @@ main{
     align-items: center;
     text-align: center;
     
-
     color: white;
+    margin-bottom: 2.5rem;
     // border: 1px solid black;
 
     h1{
-        padding-bottom: 1.2rem;
+        padding-bottom: 0.9rem;
+        font-size: 1.8rem;
+    }
+
+    p{
+        font-size: large;
     }
 }
 
@@ -68,9 +75,9 @@ main{
     color: white;
     background-color: $color-blue;
     border-radius: 0.6rem;
-    box-shadow: 0px 10px 4px -2px rgba(0,0,0,0.4);
-    -webkit-box-shadow: 0px 10px 4px -2px rgba(0,0,0,0.4);
-    -moz-box-shadow: 0px 10px 4px -2px rgba(0,0,0,0.4);
+    box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
     cursor: pointer;
 }
 
@@ -80,8 +87,11 @@ main{
     height: 25rem;
     // border: 1px solid black;
     border-radius: 0.6rem;
+    box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
 
-    // margin-bottom: 5rem;
+    margin-bottom: 4rem;
 
     .sec-inf-conteudo{
         display: flex;
@@ -112,18 +122,24 @@ main{
             text-transform: uppercase;
             color: white;
             font-size: 0.75rem;
+            letter-spacing: 0.1rem;
             cursor: pointer;
 
-            // box-shadow: 0px 10px 4px -2px rgba(36, 133, 91, 0.001);
-            // -webkit-box-shadow: 0px 10px 4px -2px hsl(154, 59%, 51%, 0.1%);
-            // -moz-box-shadow: 0px 10px 4px -2px hsl(154, 59%, 51%, 0.1%);
+            box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+            -webkit-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+            -moz-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+            
         }
 
         p{
             color: $color-grayishBlue;
             font-size: 0.7rem;
             text-align: center;
-            padding: 0rem 1rem;
+            padding: 0rem 2rem;
+            
+            strong{
+                color: rgba(255, 0, 0, 0.911);
+            }
         }
     }
 
