--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -82,6 +82,7 @@ main img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  text-align: center;
   width: 100%;
   height: 5.5rem;
   color: white;
