--- a/intro-component-with-signup-form-master/mobile/mobile.css
+++ b/intro-component-with-signup-form-master/mobile/mobile.css
@@ -76,13 +76,11 @@ main img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  margin-bottom: 1.6rem;
   width: 100%;
   height: 5.5rem;
   color: white;
@@ -102,7 +100,7 @@ main img {
   box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-  margin-bottom: 4rem;
+  margin-bottom: 3.5rem;
 }
 
 .sec-inf .sec-inf-conteudo {
@@ -126,6 +124,7 @@ main img {
 .sec-inf .sec-inf-conteudo input, .sec-inf .sec-inf-conteudo button {
   height: 2.9rem;
   width: 100%;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 .sec-inf .sec-inf-conteudo input {
@@ -172,4 +171,77 @@ main img {
 .sec-inf .sec-inf-conteudo p strong {
   color: rgba(255, 0, 0, 0.911);
 }
-/*# sourceMappingURL=style.css.map */
+
+@media (min-width: 850px) {
+  * {
+    padding: 0;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  body {
+    height: 100vh;
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+  }
+  main {
+    width: 100vw;
+    height: 100%;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    background-color: #ff7a7a;
+    border: 1px solid green;
+  }
+  .sec-title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    color: white;
+    border: 1px solid black;
+    width: 40rem;
+  }
+  .sec-title h1 {
+    font-size: 2rem;
+  }
+  .sec-title p {
+    font-size: larger;
+  }
+  .sec-price {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 1.6rem;
+    width: 100%;
+    height: 3.3rem;
+    color: white;
+    background-color: #6055a5;
+    border-radius: 0.6rem;
+    box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
+}
+/*# sourceMappingURL=mobile.css.map */
