--- a/intro-component-with-signup-form-master/mobile/mobile.scss
+++ b/intro-component-with-signup-form-master/mobile/mobile.scss
@@ -63,12 +63,17 @@ main{
     }
 }
 
+// .price-inf{
+//     border: 1px solid black;
+// }
+
 .sec-price{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
     text-align: center;
+    margin-bottom: 1.6rem;
 
     // border: 1px solid black;
     width: 100%;
@@ -92,7 +97,7 @@ main{
     -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
 
-    margin-bottom: 4rem;
+    margin-bottom: 3.5rem;
 
     .sec-inf-conteudo{
         display: flex;
@@ -106,6 +111,8 @@ main{
         input, button{
             height: 2.9rem;
             width: 100%;
+            font-family: "Poppins", Arial, Helvetica, sans-serif;
+    
         }
 
         input{
@@ -146,4 +153,79 @@ main{
 
 }
 
+@media (min-width: 850px){
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        // position: relative;
+    }
+    
+    body{    
+        height: 100vh;
+        font-family: "Poppins", Arial, Helvetica, sans-serif;
+    }
 
+    main{
+
+        width: 100vw;
+        height: 100%;
+        position: relative;
+    
+        display: flex;
+        flex-direction: row;
+        // align-items: center;
+        // justify-content: space-around;
+    
+        background-color: $color-red;
+        border: 1px solid green;
+        // padding: 4rem 1.8rem 0rem;
+    
+        // img{
+        //     position: absolute;
+        //     height: 100%;
+            
+        // }
+    }
+
+    .sec-title{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        // text-align: center;
+        
+        color: white;
+        // margin-bottom: 2.5rem;
+        border: 1px solid black;
+        width: 40rem;
+    
+        h1{
+            // padding-bottom: 0.9rem;
+            font-size: 2rem;
+        }
+    
+        p{
+            font-size: larger;
+        }
+    }
+
+    .sec-price{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        // text-align: center;
+        margin-bottom: 1.6rem;
+    
+        // border: 1px solid black;
+        width: 100%;
+        height: 3.3rem;
+        color: white;
+        background-color: $color-blue;
+        border-radius: 0.6rem;
+        box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+        cursor: pointer;
+    }
+}
