--- a/intro-component-with-signup-form-master/mobile/mobile.css
+++ b/intro-component-with-signup-form-master/mobile/mobile.css
@@ -76,6 +76,9 @@ main img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -90,6 +93,11 @@ main img {
   -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+.sec-price p {
+  word-wrap: normal;
+  width: 65%;
 }
 
 .sec-inf {
@@ -121,7 +129,8 @@ main img {
   padding: 0.5rem 1.6rem;
 }
 
-.sec-inf .sec-inf-conteudo input, .sec-inf .sec-inf-conteudo button {
+.sec-inf .sec-inf-conteudo input,
+.sec-inf .sec-inf-conteudo button {
   height: 2.9rem;
   width: 100%;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
@@ -194,6 +203,9 @@ main img {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     background-color: #ff7a7a;
     border: 1px solid green;
   }
@@ -208,17 +220,26 @@ main img {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    text-align: left;
     color: white;
-    border: 1px solid black;
-    width: 40rem;
+    width: 46%;
   }
   .sec-title h1 {
     font-size: 2rem;
   }
   .sec-title p {
-    font-size: larger;
+    font-size: large;
   }
-  .sec-price {
+  .price-inf {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .price-inf .sec-price {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -242,6 +263,14 @@ main img {
     -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+  }
+  .price-inf .sec-price p {
+    word-wrap: normal;
+    width: 100%;
+  }
+  .price-inf .sec-inf {
+    padding-bottom: 10px;
+    height: 20rem;
   }
 }
 /*# sourceMappingURL=mobile.css.map */
