--- a/intro-component-with-signup-form-master/mobile/mobile.scss
+++ b/intro-component-with-signup-form-master/mobile/mobile.scss
@@ -3,229 +3,246 @@ $color-green: hsl(154, 59%, 51%);
 $color-blue: hsl(248, 32%, 49%);
 $color-darkBlue: hsl(249, 10%, 26%);
 $color-grayishBlue: hsl(246, 25%, 77%);
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    position: relative;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  position: relative;
 }
 
-body{
-    display: flex;
-    justify-content: center;
+body {
+  display: flex;
+  justify-content: center;
 
-    height: 157vh;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
+  height: 157vh;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
-main{
+main {
+  width: 420px;
+  height: 100%;
+  position: relative;
 
-    width: 420px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  background-color: $color-red;
+  // border: 1px solid green;
+  padding: 4rem 1.8rem 0rem;
+
+  img {
+    position: absolute;
     height: 100%;
-    position: relative;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-    background-color: $color-red;
-    // border: 1px solid green;
-    padding: 4rem 1.8rem 0rem;
-
-    img{
-        position: absolute;
-        height: 100%;
-        
-    }
+  }
 }
 
-.sec-title{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    
-    color: white;
-    margin-bottom: 2.5rem;
-    // border: 1px solid black;
+.sec-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
-    h1{
-        padding-bottom: 0.9rem;
-        font-size: 1.8rem;
-    }
+  color: white;
+  margin-bottom: 2.5rem;
+  // border: 1px solid black;
 
-    p{
-        font-size: large;
-    }
+  h1 {
+    padding-bottom: 0.9rem;
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-size: large;
+  }
 }
 
 // .price-inf{
 //     border: 1px solid black;
 // }
 
-.sec-price{
+.sec-price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 1.6rem;
+
+  // border: 1px solid black;
+  width: 100%;
+  height: 5.5rem;
+  color: white;
+  background-color: $color-blue;
+  border-radius: 0.6rem;
+  box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  
+    p{
+        word-wrap: normal;
+        width: 65%;
+    }
+}
+
+.sec-inf {
+  background-color: white;
+  width: 100%;
+  height: 25rem;
+  // border: 1px solid black;
+  border-radius: 0.6rem;
+  box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+
+  margin-bottom: 3.5rem;
+
+  .sec-inf-conteudo {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    // border: 1px solid brown;
+    height: 100%;
+    padding: 0.5rem 1.6rem;
+
+    input,
+    button {
+      height: 2.9rem;
+      width: 100%;
+      font-family: "Poppins", Arial, Helvetica, sans-serif;
+    }
+
+    input {
+      padding-left: 1rem;
+      ::placeholder {
+        color: black;
+      }
+      // border-color: $color-grayishBlue;
+    }
+
+    button {
+      background-color: $color-green;
+      border: none;
+      border-radius: 0.2rem;
+      text-transform: uppercase;
+      color: white;
+      font-size: 0.75rem;
+      letter-spacing: 0.1rem;
+      cursor: pointer;
+
+      box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+      -webkit-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+      -moz-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
+    }
+
+    p {
+      color: $color-grayishBlue;
+      font-size: 0.7rem;
+      text-align: center;
+      padding: 0rem 2rem;
+
+      strong {
+        color: rgba(255, 0, 0, 0.911);
+      }
+    }
+  }
+}
+
+//RESPONSIVIDADE WEB
+
+@media (min-width: 850px) {
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    // position: relative;
+  }
+
+  body {
+    height: 100vh;
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+  }
+
+  main {
+    width: 100vw;
+    height: 100%;
+    position: relative;
+
+    display: flex;
+    flex-direction: row;
     // align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 1.6rem;
+    justify-content: space-evenly;
 
-    // border: 1px solid black;
-    width: 100%;
-    height: 5.5rem;
+    background-color: $color-red;
+    border: 1px solid green;
+    // padding: 4rem 1.8rem 0rem;
+
+    // img{
+    //     position: absolute;
+    //     height: 100%;
+
+    // }
+  }
+
+  .sec-title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+
     color: white;
-    background-color: $color-blue;
-    border-radius: 0.6rem;
-    box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-    cursor: pointer;
-}
-
-.sec-inf{
-    background-color: white;
-    width: 100%;
-    height: 25rem;
+    // margin-bottom: 2.5rem;
     // border: 1px solid black;
-    border-radius: 0.6rem;
-    box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
+    width: 46%;
 
-    margin-bottom: 3.5rem;
-
-    .sec-inf-conteudo{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        // border: 1px solid brown;
-        height: 100%;
-        padding: 0.5rem 1.6rem;
-
-        input, button{
-            height: 2.9rem;
-            width: 100%;
-            font-family: "Poppins", Arial, Helvetica, sans-serif;
-    
-        }
-
-        input{
-            padding-left: 1rem;
-            ::placeholder{
-                color: black;
-            }
-            // border-color: $color-grayishBlue;
-        }
-
-        button{
-            background-color: $color-green;
-            border: none;
-            border-radius: 0.2rem;
-            text-transform: uppercase;
-            color: white;
-            font-size: 0.75rem;
-            letter-spacing: 0.1rem;
-            cursor: pointer;
-
-            box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
-            -webkit-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
-            -moz-box-shadow: 0px 5px 0px 0px rgba(8, 143, 85, 0.75);
-            
-        }
-
-        p{
-            color: $color-grayishBlue;
-            font-size: 0.7rem;
-            text-align: center;
-            padding: 0rem 2rem;
-            
-            strong{
-                color: rgba(255, 0, 0, 0.911);
-            }
-        }
+    h1 {
+      // padding-bottom: 0.9rem;
+      font-size: 2rem;
     }
 
-}
-
-@media (min-width: 850px){
-    *{
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        // position: relative;
+    p {
+      font-size: large;
     }
-    
-    body{    
-        height: 100vh;
-        font-family: "Poppins", Arial, Helvetica, sans-serif;
-    }
+  }
 
-    main{
+  .price-inf {
+    // border: 1px solid black;
+    display: flex;
+    flex-direction: column;
 
-        width: 100vw;
-        height: 100%;
-        position: relative;
-    
-        display: flex;
-        flex-direction: row;
-        // align-items: center;
-        // justify-content: space-around;
-    
-        background-color: $color-red;
-        border: 1px solid green;
-        // padding: 4rem 1.8rem 0rem;
-    
-        // img{
-        //     position: absolute;
-        //     height: 100%;
-            
-        // }
-    }
+    .sec-price {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      // text-align: center;
+      margin-bottom: 1.6rem;
 
-    .sec-title{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        // text-align: center;
+      // border: 1px solid black;
+      width: 100%;
+      height: 3.3rem;
+      color: white;
+      background-color: $color-blue;
+      border-radius: 0.6rem;
+      box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+      -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+      -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
+      cursor: pointer;
         
-        color: white;
-        // margin-bottom: 2.5rem;
-        border: 1px solid black;
-        width: 40rem;
-    
-        h1{
-            // padding-bottom: 0.9rem;
-            font-size: 2rem;
-        }
-    
         p{
-            font-size: larger;
+            word-wrap: normal;
+            width: 100%;
         }
     }
 
-    .sec-price{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        // text-align: center;
-        margin-bottom: 1.6rem;
-    
-        // border: 1px solid black;
-        width: 100%;
-        height: 3.3rem;
-        color: white;
-        background-color: $color-blue;
-        border-radius: 0.6rem;
-        box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-        -webkit-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-        -moz-box-shadow: 0px 7px 0px 0px rgba(0,0,0,0.2);
-        cursor: pointer;
+    .sec-inf{
+        padding-bottom: 10px;
+        height: 20rem;
     }
+  }
 }
