--- a/intro-component-with-signup-form-master/mobile/mobile.css
+++ b/intro-component-with-signup-form-master/mobile/mobile.css
@@ -182,15 +182,8 @@ main img {
 }
 
 @media (min-width: 850px) {
-  * {
-    padding: 0;
-    margin: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
   body {
     height: 100vh;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
   }
   main {
     width: 100vw;
@@ -206,8 +199,6 @@ main img {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-    background-color: #ff7a7a;
-    border: 1px solid green;
   }
   .sec-title {
     display: -webkit-box;
@@ -221,7 +212,6 @@ main img {
         -ms-flex-align: start;
             align-items: flex-start;
     text-align: left;
-    color: white;
     width: 46%;
   }
   .sec-title h1 {
@@ -240,29 +230,8 @@ main img {
             flex-direction: column;
   }
   .price-inf .sec-price {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-bottom: 1.6rem;
     width: 100%;
     height: 3.3rem;
-    color: white;
-    background-color: #6055a5;
-    border-radius: 0.6rem;
-    box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
   }
   .price-inf .sec-price p {
     word-wrap: normal;
@@ -271,6 +240,14 @@ main img {
   .price-inf .sec-inf {
     padding-bottom: 10px;
     height: 20rem;
+  }
+  .price-inf .sec-inf .sec-inf-conteudo {
+    margin-top: 0.3rem;
+    height: 100%;
+  }
+  .price-inf .sec-inf .sec-inf-conteudo input,
+  .price-inf .sec-inf .sec-inf-conteudo button {
+    height: 2.4rem;
   }
 }
 /*# sourceMappingURL=mobile.css.map */
