--- a/intro-component-with-signup-form-master/mobile/mobile.scss
+++ b/intro-component-with-signup-form-master/mobile/mobile.scss
@@ -60,10 +60,6 @@ main {
   }
 }
 
-// .price-inf{
-//     border: 1px solid black;
-// }
-
 .sec-price {
   display: flex;
   flex-direction: column;
@@ -82,18 +78,18 @@ main {
   -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  
-    p{
-        word-wrap: normal;
-        width: 65%;
-    }
+
+  p {
+    word-wrap: normal;
+    width: 65%;
+  }
 }
 
 .sec-inf {
   background-color: white;
   width: 100%;
   height: 25rem;
-  // border: 1px solid black;
+  //   border: 1px solid black;
   border-radius: 0.6rem;
   box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
@@ -156,16 +152,9 @@ main {
 //RESPONSIVIDADE WEB
 
 @media (min-width: 850px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    // position: relative;
-  }
 
   body {
     height: 100vh;
-    font-family: "Poppins", Arial, Helvetica, sans-serif;
   }
 
   main {
@@ -175,17 +164,11 @@ main {
 
     display: flex;
     flex-direction: row;
-    // align-items: center;
     justify-content: space-evenly;
-
-    background-color: $color-red;
-    border: 1px solid green;
-    // padding: 4rem 1.8rem 0rem;
 
     // img{
     //     position: absolute;
     //     height: 100%;
-
     // }
   }
 
@@ -194,14 +177,9 @@ main {
     flex-direction: column;
     align-items: flex-start;
     text-align: left;
-
-    color: white;
-    // margin-bottom: 2.5rem;
-    // border: 1px solid black;
     width: 46%;
 
     h1 {
-      // padding-bottom: 0.9rem;
       font-size: 2rem;
     }
 
@@ -211,38 +189,35 @@ main {
   }
 
   .price-inf {
-    // border: 1px solid black;
     display: flex;
     flex-direction: column;
 
     .sec-price {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      // text-align: center;
-      margin-bottom: 1.6rem;
-
       // border: 1px solid black;
       width: 100%;
       height: 3.3rem;
-      color: white;
-      background-color: $color-blue;
-      border-radius: 0.6rem;
-      box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-      -webkit-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-      -moz-box-shadow: 0px 7px 0px 0px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-        
-        p{
-            word-wrap: normal;
-            width: 100%;
-        }
+      
+      p {
+        word-wrap: normal;
+        width: 100%;
+      }
     }
 
-    .sec-inf{
-        padding-bottom: 10px;
-        height: 20rem;
+    .sec-inf {
+      padding-bottom: 10px;
+      height: 20rem;
+    //   border: 1px solid black;
+
+      .sec-inf-conteudo {
+          margin-top: 0.3rem;
+        // border: 1px solid red;
+        height: 100%;
+
+        input,
+        button {
+          height: 2.4rem;
+        }
+      }
     }
   }
 }
